# bron-embeddings

./: ._test_embeddings.ipynb  .gitignore  README.md  create_parquet.py  docker-compose.yml  es_to_qdrant_parallel copy.py  es_to_qdrant_parallel.py  onnx_embeddings.ipynb  test_embeddings.ipynb
backend/: Dockerfile
backend/app/: main.py
experimenting/: app.py  chunking_test.ipynb  cohere-haystack.ipynb  cohere-haystack.py  cohere_test.py  es_field_exploration.ipynb  es_to_md.ipynb  es_to_qdrant.py  es_to_qdrant_autorag.py  es_to_qdrant_cohere.py  es_to_qdrant_cohere_fixed.py  es_to_qdrant_cohere_int8.py  es_to_qdrant_parallel.py  litellm.ipynb  pyproject.toml  qdrant_experiments.ipynb  run_embeddings.py  test.html  test_embeddings.ipynb  test_onnx.ipynb  test_unstructured.ipynb  which_fields.ipynb
experimenting/models/models--Qdrant--bm25/refs/: main
experimenting/models/models--Qdrant--bm25/snapshots/aa198963f12b54c80758d0e00022c8bb0feae808/: azerbaijani.txt  basque.txt  indonesian.txt  kazakh.txt  slovene.txt  tajik.txt
experimenting/models/models--Qdrant--bm25/snapshots/e499a1f8d6bec960aab5533a0941bf914e70faf9/: bengali.txt  catalan.txt  chinese.txt  hebrew.txt  hinglish.txt  nepali.txt
frontend2/: App.svelte  Dockerfile
frontend2/components/: Chat.svelte  Documents.svelte
hayhooks/: rag_pipe.yaml
index/: __init__.py  elastic_search.py  utils.py
ner/: __init__.py  main.py
src/: vectorstore.py
vector_store/: __init__.py  qdrant.py
